tests/NormalTests/paczka1/fuzzy1/34534904.err
Error in line 20: Egl80Dlbp3 S204 358,3
Error in line 36: lOl8RzrvxE1 S631 43,4
Error in line 37: WAR S725 24,8
